# mpcs-compilers

./: .gitignore  Assignment 6 Report.docx  Cargo.toml  Makefile  README.md  run_tests.py  yeehaw
final-optimization-benchmarks/: bigfile-cf.ek  bigfile-function.ek
in/: test2.ek  test4.ek
output/: test1.llvm  test1.yaml  test10.llvm  test11.ast  test11.llvm  test13.llvm  test19-O3.llvm  test19.llvm  test2-arg.llvm  test2.yaml  test4.yaml  test7.yaml
results/: test_bigfile-aa.csv  test_bigfile-cf-aa.csv  test_bigfile-function-aa.csv  test_hellfile-aa.csv  test_hellfile-cf-aa.csv  test_hellfile-cf.csv  test_hellfile-function-aa.csv  test_hellfile-function.csv  test_hellfile.csv  test_test20-aa.csv  test_test20.csv
src/: .jit.rs.swp  .kaleidoscope.lalrpop.swp  ast.rs  fuzz-main.rs  jit.rs  kaleidoscope.lalrpop  kaleidoscope.pest  main.rs  main_old.rs  optimize.rs  typecheck.rs
test/: .test1.ek.swp  .test3.ek.swp  cint_test_1.ek  cint_test_add_over.ek  cint_test_div_good.ek  cint_test_div_over.ek  cint_test_div_zero.ek  cint_test_invalid.ek  cint_test_mul_over.ek  cint_test_neg_over.ek  cint_test_sub_over.ek  crash.ek  crashtest1_bigliteral.ek  crashtest2_smallfloat.ek  errtest1_voidvdecl.ek  errtest2_badref.ek  errtest4_funcreturnsreftype.ek  errtest5_badrefinitialization.ek  errtest6_badrefarginit.ek  errtest7_norun.ek  hellfile.ek  small3.ek  test10.ek  test11.ek  test12.ek  test13.ek  test14.ek  test15.ek  test16.ek  test17.ek  test18.ek  test19.ek  test19a.ek  test1_no_prints_at_all.ek  test1_without_print_literals.ek  test2-arg.ek  test2.ast.yaml  test21.ek  (+13 more)
