[package]
name = "ekcc"
version = "0.1.0"
authors = ["claudia", "julian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dependencies]
clap = "2.33"
pest = "2.0"
pest_derive = "2.0"
lalrpop = "0.19.0"
lalrpop-util = "0.19.0"
regex = "1"
