[package]
name = "ekcc"
version = "0.1.0"
authors = ["claudia", "julian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dependencies]
clap = "2.33"
lalrpop = "0.19.0"
lalrpop-util = "0.19.0"
regex = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
anyhow = "1.0"
afl = "*"
